rest client, parallel the cucumber tests, create profiles