@@ -16,6 +16,7 @@
         <maven.compiler.source>${jdk.version}</maven.compiler.source>
         <maven.compiler.target>${jdk.version}</maven.compiler.target>
         <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
+        <parallel.test.count>100</parallel.test.count>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <info.cukes.version>1.1.7</info.cukes.version>
         <org.seleniumhq.selenium.version>2.53.1</org.seleniumhq.selenium.version>
@@ -62,7 +63,6 @@
             <scope>provided</scope>
             <version>3.0</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.hamcrest</groupId>
@@ -112,5 +112,68 @@
             <version>2.8.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>acceptance</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration>
+                            <parallel>classes</parallel>
+                            <perCoreThreadCount>false</perCoreThreadCount>
+                            <threadCountClasses>${parallel.test.count}</threadCountClasses>
+                            <useUnlimitedThreads>false</useUnlimitedThreads>
+                            <argLine>-Xmx1024m</argLine>
+                            <argLine>-XX:MaxPermSize=256m</argLine>
+                            <includes>
+                                <include>**/Run_*.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/Run_SOMETHING*.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>smoke</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration>
+                            <parallel>classes</parallel>
+                            <perCoreThreadCount>false</perCoreThreadCount>
+                            <threadCountClasses>${parallel.test.count}</threadCountClasses>
+                            <useUnlimitedThreads>false</useUnlimitedThreads>
+                            <argLine>-Xmx1024m</argLine>
+                            <argLine>-XX:MaxPermSize=256m</argLine>
+                            <includes>
+                                <include>**/Run_*Smoke*.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/Run_SOMETHING*.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+    </profiles>
 </project>
